packages/cargo_tools_vscode_macros/tests/compile_fail/state_value_empty_tuple.stderr
error: StateValue can only be derived for tuple structs with exactly one field
 --> tests/compile_fail/state_value_empty_tuple.rs:5:8
  |
5 | struct EmptyTuple();
  |        ^^^^^^^^^^
